--- a/css/contratos.css
+++ b/css/contratos.css
@@ -124,7 +124,11 @@ table{
 	margin:20px;
 }
 .boton{
-	margin-left: 27%;
+	margin:10px;
+	padding: 10px;
+	margin-left: 70%;
+	background: #FD052E;
+	color: white;
 }
 
 .fooo{
