--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,27 +9,48 @@ body{
 
 @media(max-width: 1300px){
 	body{
-		background-color: orange;
+		background-color: white;
+	
 	}
+	header,.main,footer,article{
+	width: 80%;
+	max-width: 1300px;
+}
 }
 @media(max-width: 1000px){
 	body{
-		background-color: red;
+		background-color: white;
 	}
+	header,.main,footer,article{
+	width: 60%;
+	max-width: 1000px;
+}
 }
 @media(max-width: 700px){
 	body{
-		background-color: blue;
+		background-color: white;
 	}
+	header,.main,footer,article{
+	width: 40%;
+	max-width: 700px;
+}
+}
+@media(max-width: 500px){
+	body{
+		background-color: white;
+	}
+	header,.main,footer,article{
+	width: 30%;
+	max-width: 500px;
+}
 }
 header,.main,footer,article{
 	width: 100%;
-	margin: 20px auto;
-	max-width: 1000px;
+	max-width: 1800px;
 }
 
 .menu{
-	background:#EC2727 ;
+	background:#F1072E ;
 	overflow: hidden;
 }
 .menu ul{
@@ -37,65 +58,77 @@ header,.main,footer,article{
 }
 .menu ul li{
 	float: left;
-	
 }
-
 
 .menu ul li a{
 	padding: 10px 20px;
 	display: block;
 	color: white;
 	text-decoration: none;
-	margin-left: 5px;
-	
 }
 .menu ul li a:hover{
-	background: #82A3FF;
-	
+	background: #B7AFAF;
 }
 
-.titulo{
-
+.tit{
+margin-left: 96px;
+font-size: 40px;
 }
 
 footer{
-	background-color: black;
-	height: 25vh;
-	border-top: 10px solid crimson;
+	clear: both;
+	width: 100%
+	margin:100%;
+	background: black;
 	color: #fff;
+	height: 20%;
+	border-top: 10px solid crimson;
+	
+
 }
 
 .container{
-	top:50%;
+	top:35%;
 	position: absolute;
 	
 }
 .ima{
 	position: relative;
+	width: auto;
 }
 .sub{
 	margin-top: 15px;
-	margin-left: 55px;
+	margin-left: 95px;
 	color: #888686;
+	font-size: 30px;
 }
 .menu{
-	margin-top: 15px;
-	margin-left: 55px;
+	margin-top: 19px;
+	margin-left: 95px;
+	padding: 5px;
+	margin-right: 55px;
+	display: inline-grid;
 }
 .titulo{
 	margin-left: 55px;
 	color: #888686;
+	font-size: 40px;
 }
 .start{
-	top: 130%;
-	left: 49%;
+	top: 128%;
+	left: 55%;
 	position: absolute;
 }
 .lista{
 	list-style: square;
 }
+
 .foto{
 	margin-bottom: 4px;
+	margin-left: 7%;
+}
+.iman{
+	margin-left: 5%;
 }
 
 .iconos{
@@ -116,4 +149,20 @@ transform: scale(2) rotate(30deg);
 -ms-transition: all 1000ms ease-in-out;
 -o-transition: all 1000ms ease-in-out;
 transition: all 1000ms ease-in-out;
+}
+.big{
+	margin-left: -18%;
+	margin: 0;
+	padding: 0;
+	width: 1349px;
+	height: 550px;
+	
+	
+}
+
+.ima2{
+	margin-left: 7%;
+	margin-top: 5%;
+	margin-bottom: 2%;
+	width: 600px;
 }
