--- a/css/planes.css
+++ b/css/planes.css
@@ -10,18 +10,30 @@ body{
 
 @media(max-width: 1300px){
 	body{
-		background-color: orange;
+		background-color: #DFDCDC;
 	}
+	.logo{
+	background: white;
+	padding: 3px;
+}
 }
 @media(max-width: 1000px){
 	body{
-		background-color: red;
+		background-color: #DFDCDC;
 	}
+	.logo{
+	background: white;
+	padding: 3px;
+}
 }
 @media(max-width: 700px){
 	body{
-		background-color: blue;
+		background-color: #DFDCDC;
 	}
+	.logo{
+	background: white;
+	padding: 3px;
+}
 }
 
 .logo{
@@ -98,6 +110,10 @@ legend{
 	margin-left: 25%;
 }
 .boton{
+	margin:10px;
+	padding: 10px;
+	background: #FD052E;
+	color:white; 
 	margin-left: 25%;
 }
 
