--- a/css/contratos.css
+++ b/css/contratos.css
@@ -9,17 +9,17 @@ body{
 
 @media(max-width: 1300px){
 	body{
-		background-color: white;
+		background-color: #DFDCDC;
 	}
 }
 @media(max-width: 1000px){
 	body{
-		background-color: white;
+		background-color: #DFDCDC;
 	}
 }
 @media(max-width: 700px){
 	body{
-		background-color: white;
+		background-color: #DFDCDC;
 	}
 }
 
